environment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-album-viewer
  namespace: dummy-app
  labels:
    app: dotnet-album-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-album-viewer
  template:
    metadata:
      labels:
        app: dotnet-album-viewer
    spec:
      containers:
      - name: dotnet-album-viewer
        image: gozul/dotnet-album-viewer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
