environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-album-viewer-svc
  namespace: dummy-app
spec:
  selector:
    app: dotnet-album-viewer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
