environment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-album-viewer-ingress
  namespace: dummy-app
spec:
  ingressClassName: nginx
  rules:
  - host: albumviewer.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dotnet-album-viewer-svc
            port:
              number: 80
